# micheladas

./: .env.example  .env.local.example  .env.production.example  .gitignore  package-lock.json  package.json  pyproject.toml  vercel.json  vite.config.ts
.vercel/output/: config.json  nitro.json
api/: [...path].py  index.py  requirements-vercel.txt  requirements.txt
backend/: .env.example  .env.production.example  README.md  pytest.ini  requirements.txt  test_db_connection.py
backend/app/: cache.py  config.py  database.py  main.py
backend/scripts/: backup_db.py  init_db.py  migrate_adiciones_porcion.py  migrate_item_cantidad.py  migrate_nomina_prestamos.py  seed_menu.py
backend/tests/: test_admin_menu.py  test_health_auth.py  test_menu.py  test_nomina.py  test_reportes.py  test_services_unit.py
public/: README.md  manifest.webmanifest
scripts/: build.mjs  generate_pwa_icons.py  vercel-merge-api.mjs
src/: routeTree.gen.ts  server.ts  styles.css
src/components/: ComandaViewDialog.tsx  ComandasList.tsx  InventoryPanel.tsx  MesasPanel.tsx  OfflineSyncBanner.tsx  OrderBuilder.tsx  PosHeader.tsx  PwaInstallButton.tsx  PwaRegistrar.tsx  QuantityStepper.tsx
src/hooks/: use-auto-print-comandas.ts  use-mesero-comanda-alerts.ts  use-offline-sync.ts  use-print-station-bootstrap.ts  use-print-station-poll.ts  use-pwa-install.ts
src/lib/: admin-api.ts  admin-nav.ts  api-fetch.ts  auth-permissions.ts  auth-routes.ts  auth.ts  caja-api.ts  comanda-display.ts  comanda-print.ts  comanda-queue.test.ts  comanda-queue.ts  fases.test.ts  fases.ts  inventario-cantidad.ts  (+23 more)
(+269 files in other folders)
