[project]
name = "micheladas"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "mysql-connector-python==9.1.0",
    "bcrypt==4.2.1",
    "python-jose[cryptography]==3.3.0",
    "python-dotenv==1.0.1",
    "pydantic-settings==2.7.0",
    "email-validator==2.2.0",
    "mangum==0.17.0",
]

[tool.vercel]
entrypoint = "api.index:handler"
